Fix block table alignment issue
Changed CSS selector from td:first-child to td:nth-child(2) to properly
apply 99% width to the content column instead of the drag handle column.
This fixes the issue where block text boxes appeared too far to the right.

--- a/src/main/webapp/css/martinis.css
+++ b/src/main/webapp/css/martinis.css
@@ -58,8 +58,8 @@
     border-top: none;
 }
 
-#table-scenes td:first-child,
-#table-blocks td:first-child {
+#table-scenes td:nth-child(2),
+#table-blocks td:nth-child(2) {
     width: 99%;
 }
 
